mjpeg-proxy install

--- a/vigil-server/package.json
+++ b/vigil-server/package.json
@@ -9,6 +9,7 @@
   "author": "kurtzam@gmail.com",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.16.3"
+    "express": "^4.16.3",
+    "mjpeg-proxy": "^0.2.0"
   }
 }
